--- a/login.html
+++ b/login.html
@@ -44,7 +44,7 @@
         <span class="error" id="passwordError"></span>
         <div id="passwordError" class="error"></div>
         <br>
-        <button type="submit" onclick="validateForm()">Login</button>
+        <button type="submit" onclick="validateLoginForm()">Login</button>
     </form>
   </div>
 </div>
